<!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by <tien.workinfo@gmail.com - rubit1359@gmail.com - manetivinay@gmail.com>, October 2016
  -->

<resources>
    <string name="app_name">Rubit</string>
    <string name="text_connection_error_title">Connection Issue</string>
    <string name="text_connection_error">Unable to connect to the Internet. Please check your connection!</string>
    <string name="button_try_again">Try Again</string>
    <string name="hello_world">hello world!!</string>
    <string name="sign_in">Sign In</string>
    <string name="google_play_services_error">Google Play Services error</string>
    <string name="sign_out">Sign out</string>
    <string name="image_content_description">Image Content Description</string>
    <string name="text_details">Details</string>
    <string name="text_quest_bar">Please fill in your request!</string>
    <string name="textRequestPop">Request Pop</string>
    <string name="text_about">About</string>
    <string name="text_badges">Badges</string>
    <string name="text_tags">Tags</string>
    <string name="text_reviews">Reviews</string>
    <string name="text_images">Images</string>
    <string name="review_comment">\"Great landscape photographer. Hope to more chance to work with Lo Nguyen.\"</string>
    <string name="don_t_have_a_account"><u>Don\'t have a account?</u></string>
    <string name="text_overview">Overview</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_done">DONE</string>
    <string name="text_verified">VERIFIED</string>
    <string name="text_on_time">On-time</string>
    <string name="text_coderschool">CoderSchool</string>
    <string name="text_overview_fake">I love Photography. I love traveling. For me, taking great pictures from different countries is what I call Living</string>
    <string name="text_fake_count">(12)</string>
    <!--google map api key-->
    <string name="GOOGLE_MAP_API_KEY">AIzaSyDtatUvIayZ6gq9iCTbSiTapYiDvAoJbbU</string>
    <string name="choose_tag_message_top">Please choose what you are interested in !</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="text_address">Address</string>
    <!--IMGUR_CLIENT_ID-->
    <string name="IMGUR_CLIENT_ID">513b74b2690c49d</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="edit_profile">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
</resources>
