<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by <tien.workinfo@gmail.com - rubit1359@gmail.com - manetivinay@gmail.com>, October 2016
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorLightGreen">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/magicBulbIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/magic_bulb_marginTop"
        app:srcCompat="@drawable/magic_bulb"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/goButtonInLoginIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/magicBulbIv"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/go_button_marginTop"
        app:srcCompat="@drawable/go_button_black_bg"/>


    <RelativeLayout
        android:id="@+id/emailIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goButtonInLoginIv"
        android:layout_marginBottom="@dimen/margin_bottom_email"
        android:layout_marginLeft="@dimen/margin_side_login"
        android:layout_marginRight="@dimen/margin_side_login"
        android:layout_marginTop="@dimen/marginTop_email"
        android:background="@drawable/email_bar"
        android:gravity="center">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/text_hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingEnd="@dimen/padding_login_credentials"
            android:paddingLeft="@dimen/padding_login_credentials"
            android:paddingStart="@dimen/padding_login_credentials"
            tools:text="vinaymaneti@gmail.com"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/passwordIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailIv"
        android:layout_marginLeft="@dimen/margin_side_login"
        android:layout_marginRight="@dimen/margin_side_login"
        android:background="@drawable/password_bar">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/text_hint_password"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:paddingEnd="@dimen/padding_login_credentials"
            android:paddingLeft="@dimen/padding_login_credentials"
            android:paddingStart="@dimen/padding_login_credentials"
            tools:text="vinaymaneti@gmail.com"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_side_login">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/don_t_have_a_account"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/createAccountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/margin_side_login">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/facebookLoginIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            app:srcCompat="@drawable/facebook_login"/>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/facebookLoginIv"
            android:layout_toStartOf="@id/facebookLoginIv"
            app:srcCompat="@drawable/google_login"/>

    </RelativeLayout>

    <!--<com.google.android.gms.common.SignInButton-->
    <!--android:id="@+id/sign_in_button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:background="@drawable/google_login"-->
    <!--android:visibility="visible"/>-->

</RelativeLayout>