<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by <tien.workinfo@gmail.com - rubit1359@gmail.com - manetivinay@gmail.com>, October 2016
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGreen"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coderschool.android2.rubit.register.RegisterActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/registerLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="REGISTER"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/register_top_title"
        android:textStyle="bold"/>

    <!--remember if you want the user image should be circle replace with
    app:riv_oval="true"-->
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/uploadUserAvatar"
        android:layout_width="@dimen/register_image_avatar_width_height"
        android:layout_height="@dimen/register_image_avatar_width_height"
        android:layout_below="@id/registerLabelTv"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/avatar_margin"
        android:src="@drawable/upload_image_avatar"
        app:riv_oval="false"
        app:riv_tile_mode="clamp"/>

    <RelativeLayout
        android:id="@+id/firstNameRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uploadUserAvatar"
        android:layout_margin="@dimen/avatar_margin"
        android:background="@drawable/email_bar"
        android:gravity="center">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/userFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/please_enter_first_name"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:paddingEnd="@dimen/padding_login_credentials"
            android:paddingLeft="@dimen/padding_login_credentials"
            android:paddingStart="@dimen/padding_login_credentials"
            android:textAlignment="center"
            tools:text="vinay"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/lastNameRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstNameRl"
        android:layout_margin="@dimen/avatar_margin"
        android:background="@drawable/email_bar"
        android:gravity="center">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/userLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/please_enter_last_name"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:paddingEnd="@dimen/padding_login_credentials"
            android:paddingLeft="@dimen/padding_login_credentials"
            android:paddingStart="@dimen/padding_login_credentials"
            android:textAlignment="center"
            tools:text="maneti"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/registerEmailRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastNameRl"
        android:layout_margin="@dimen/avatar_margin"
        android:background="@drawable/email_bar"
        android:gravity="center">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/registerEdtTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/text_hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingEnd="@dimen/padding_login_credentials"
            android:paddingLeft="@dimen/padding_login_credentials"
            android:paddingStart="@dimen/padding_login_credentials"
            android:textAlignment="center"
            tools:text="vinaymaneti@gmail.com"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/registerPasswordRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerEmailRl"
        android:layout_margin="@dimen/avatar_margin"
        android:background="@drawable/password_bar">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/registerEdtTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/text_hint_password"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:paddingEnd="@dimen/padding_login_credentials"
            android:paddingLeft="@dimen/padding_login_credentials"
            android:paddingStart="@dimen/padding_login_credentials"
            android:textAlignment="center"
            tools:text="1234567890"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/registerConfirmPasswordRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerPasswordRl"
        android:layout_margin="@dimen/avatar_margin"
        android:background="@drawable/password_bar">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/registerEdtTxtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/text_hint_password"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:paddingEnd="@dimen/padding_login_credentials"
            android:paddingLeft="@dimen/padding_login_credentials"
            android:paddingStart="@dimen/padding_login_credentials"
            android:textAlignment="center"
            tools:text="1234567890"/>

    </RelativeLayout>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/goButtonInLoginIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerConfirmPasswordRl"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/go_button_black_bg"/>

    <!--<android.support.v7.widget.AppCompatButton-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_below="@id/registerConfirmPasswordRl"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_margin="@dimen/avatar_margin"-->
    <!--android:background="#E7E8E8"-->
    <!--android:gravity="center"-->
    <!--android:padding="5dp"-->
    <!--android:text="Create Account"/>-->

</RelativeLayout>
